@@ -1,6 +1,7 @@
 Changes for 2.4.0:
 
 * Fixed issue #38: Change api functions to match officials signatures of Arduino.h
+* New feature: Using RapidAssist 0.9.1
 
 
 Changes for 2.3.1:
